tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.diagnostic
diagnostic error code=O0001 family=ownership message="owning binding 'token' must be moved or dropped before return" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" bytes=59
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari" line=3 column=10 end_line=3 end_column=11 byte_start=54 byte_end=55 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-return-live-owner.ari:3:10\n   |\n 3 |   return 0;\n   |          ^"
